add special NameMap which can pre-filter names as configured
This uses the NameMap only for the primary name of the place.